--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>redis-example</module>
         <module>proxy-example</module>
         <module>serialization-example</module>
+        <module>kafka-example</module>
+        <module>effective_java_example</module>
     </modules>
 
     <dependencyManagement>
