--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>kafka-example</module>
         <module>effective_java_example</module>
         <module>canal-example</module>
+        <module>grpc-example</module>
     </modules>
 
     <dependencyManagement>
