设计模式Example, 路由策略Example。

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>effective_java_example</module>
         <module>canal-example</module>
         <module>grpc-example</module>
+        <module>distributed-example</module>
     </modules>
 
     <dependencyManagement>
